# unravel

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/01_baseline/: notes.md  predictions.csv  run.sh  summary.json
experiments/02_centered/: notes.md  predictions.csv  run.sh  summary.json
experiments/03_head_cnn/: notes.md  predictions.csv  run.sh  summary.json
experiments/04_head_both_combined/: notes.md  predictions.csv  run.sh  summary.json
experiments/05_centered_cnn/: notes.md  predictions.csv  run.sh  summary.json
experiments/06_lora_real_only/: inspect_predictions.py  metrics_per_epoch.csv  metrics_per_step.csv  predictions_inspection.txt  summary.json
experiments/06_lora_real_only/best_lora/: adapter_config.json  adapter_model.safetensors
experiments/M00_smoke_test/: metrics_per_epoch.csv  metrics_per_step.csv  summary.json
experiments/M01_lora_manual_replica_peft/: metrics_per_epoch.csv  metrics_per_step.csv  summary.json
experiments/M02_lora_manual_con_lstm/: metrics_per_epoch.csv  metrics_per_step.csv  summary.json
src/unravel/: ctc_utils.py  dataset.py  evaluate_zero_shot.py  explore.py  extend_vocab.py  htr_model.py  lora_manual.py  lora_setup.py  metrics.py  preproc.py  train_dataset.py  train_lora.py  train_lora_manual.py  vocab.py
tests/: test_ctc_utils.py  test_extend_vocab.py  test_lora_manual.py  test_lora_setup.py  test_metrics.py  test_smoke.py  test_train_dataset.py  test_vocab.py
